resources/tests/valid_syntax/fn_return.ct
//`'10'
fn main()->i64 {
  return 10u64 as i64;
}