resources/tests/invalid_syntax/binary_type.ct
//`Operands should be of same type!
//1
fn main()->i64 {
  10i64 + 10u64;
}